# FourLeft

./: .dockerignore  .gitignore  .gitlab-ci.yml  API_CONTRACT.md  docker-compose.yml  launch-dev.sh  pom.xml  restart.sh
.jpb/: jpb-settings.xml  persistence-units.xml
acrally-agent/: .gitignore  API_CONTRACT.md  Cargo.toml  DISTRIBUTION.md  README.md  build.rs  config.example.toml  dev-server-data.json  dev-server.py  release.conf.example  release.ps1
acrally-agent/assets/: generate_icon.py  icon-64.rgba
acrally-agent/src/: auth.rs  config.rs  issue.rs  logfile.rs  main.rs  model.rs  pairing.rs  races.rs  runner.rs  savegame.rs  selfupdate.rs  session.rs  shm.rs  status.rs  submit.rs  telemetry.rs  ui.rs
acrally-agent/tests/fixtures/: PlayerDataSaveSlot-carusage.sav  PlayerDataSaveSlot.sav
api/: pom.xml
api/application/: Dockerfile  docker-compose.yml  pom.xml
api/application/db/: docker-compose.yml  dump_db.sh
api/application/nginx/: fourleft.conf
api/client/: pom.xml
api/common/: pom.xml
api/game-server/: Dockerfile  pom.xml
api/game-server-client/: pom.xml
api/importer/: pom.xml
api/racenet/: pom.xml
api/wrc-server/: pom.xml
api/wrc-server/db/: docker-compose.yml
backend/: Dockerfile  docker-compose.yml  pom.xml
backend-acrally/: CLAUDE.md  Dockerfile  pom.xml
backend-acrally/src/main/resources/: application.yml
backend-dirtrally2/: Dockerfile  docker-compose.yml  dump_db.sh  pom.xml
backend-dirtrally2/src/main/resources/: application.yml  bootstrap.yml
backend-ea-sports-wrc/: Dockerfile  pom.xml
backend-ea-sports-wrc/db-backend-ea-sports-wrc/: docker-compose.yml
backend-ea-sports-wrc/src/main/resources/: application.yml
backend-ea-sports-wrc/src/test/resources/: application-realdata.yml  application-test.yml
backend-eawrc/: pom.xml
backend-wrc/: Dockerfile  docker-compose.yml  pom.xml
backend-wrc/db-backend-wrc/: docker-compose.yml
backend-wrc/src/main/resources/: application.yml
backend/db/: dump_db.sh
backend/src/main/resources/: bootstrap.yml
common/: pom.xml
devops/: .gitignore  fourleft.sh  pom.xml
devops/cli/: admin.sh  channel.sh  cli.sh  clubs.sh  common.sh  database.sh  deploy.sh  docker.sh  logs.sh  release-agent.sh  timetrials.sh
devops/docker/: backend-ea-sports-wrc.yml  rabbitmq.yml
devops/rabbitmq/: docker-compose.yml
devops/reports/: discord-config-cleanup-2026-06-30.md
devops/reverse-proxy/: Dockerfile  README.md  fourleft.conf
discord/: Dockerfile  docker-compose.yml  pom.xml
discord-bot/: Dockerfile  docker-compose.yml  pom.xml
discord-bot/db/: docker-compose.yml
discord-client/: .gitignore  .gitlab-ci.yml  pom.xml
discord-client/db/: dump_db.sh
discord-client/src/main/resources/: bootstrap.yml
discord/src/main/resources/: bootstrap.yml
docs/: acrally-module-plan.md  acrally-rig-view-plan.md  importer-write-surface.md
docs/scoring/: club-146-legacy-lookup-table.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  docker-compose.yml  karma.conf.js  nginx-frontend.conf  package-lock.json  package.json  pom.xml  proxy.conf.json  tsconfig.json
frontend/src/: forms.scss  index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  app.ts  authentication.service.ts
frontend/src/app/common/: time-format.ts
frontend/src/app/models/: acrally.ts  channel-configuration.ts  club.ts  import-queue.ts  profile.ts  time-trial-board.ts  (+2 more)
frontend/src/styles/: buttons.scss  forms.scss
nginx/: fourleft.conf
rabbitmq/: docker-compose.yml
racenet-2fa-relay/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml
racenet-authenticator/: Dockerfile  docker-compose.yml  pom.xml
racenet-authenticator/chrome/: Dockerfile
racenet-authenticator/firefox/: Dockerfile
reverse-proxy/: fourleft.conf
(+2367 files in other folders)
